Revise epub generation

--- a/Book/Makefile
+++ b/Book/Makefile
@@ -12,10 +12,12 @@ pdf : assembled.xml
         -V geometry:a5paper \
         -V geometry:margin=2cm
 	
-mobi : assembled.xml
-	@xslutil db5ToPDF_Book book.xml book.pdf	
-	@dbtoepub --stylesheet resources/stylesheets/epub.xsl book.xml
-	@ebook-convert book.epub book.mobi --cover "resources/images/Johan_Jacob_le_Fèvre_de_Montigny_(1840-1881).jpg"
-	
+epub : assembled.xml
+	pandoc -t latex -o book.epub assembled.xml -f docbook \
+	--toc \
+        --toc-depth=1 \
+        --top-level-division=chapter \
+	--epub-cover-image=resources/images/Johan_Jacob_le_Fèvre_de_Montigny_\(1840-1881\).jpg
+
 synopsis : synopsis.xml
 	pandoc -t latex -o synopsis.pdf src/synopsis.xml -f docbook
