Add support for fop rendering

--- a/Book/Makefile
+++ b/Book/Makefile
@@ -1,9 +1,19 @@
 clean :
-	@rm -f assembled.xml *.pdf *.epub *.mobi
+	@rm -f assembled.* *.pdf *.epub *.mobi
 
-assembled.xml : src/book.xml
+assembled.xml : src/*.xml
 	xmllint --xinclude src/book.xml > assembled.xml
 
+assembled.markdown : assembled.xml
+	pandoc -t latex -f docbook assembled.xml -o book.markdown
+
+assembled.fo : assembled.xml
+	xsltproc --output assembled.fo resources/stylesheets/pdf.xsl assembled.xml
+
+fop : clean assembled.fo
+	fop assembled.fo book.pdf
+	open book.pdf
+	
 pdf : assembled.xml
 	pandoc -t latex -o book.pdf assembled.xml -f docbook \
         --toc \
@@ -12,12 +22,8 @@ pdf : assembled.xml
         -V geometry:a5paper \
         -V geometry:margin=2cm
 	
-epub : assembled.xml
-	pandoc -t latex -o book.epub assembled.xml -f docbook \
-	--toc \
-        --toc-depth=1 \
-        --top-level-division=chapter \
-	--epub-cover-image=resources/images/Johan_Jacob_le_Fèvre_de_Montigny_\(1840-1881\).jpg
+epub : assembled.markdown
+	pandoc assembled.markdown -o book.epub
 
 synopsis : synopsis.xml
 	pandoc -t latex -o synopsis.pdf src/synopsis.xml -f docbook
