More style stuff

--- a/Book/Makefile
+++ b/Book/Makefile
@@ -1,3 +1,10 @@
+.DEFAULT_GOAL := readme
+
+readme:
+	@echo "make                 - generate this help message"
+	@echo "make synopsis.pdf    - render ./src/synopsis.xml as PDF"
+	@echo "make book.pdf        - render ./src/book.xml as PDF"
+
 clean :
 	@rm -f book.* synopsis.*
 
@@ -7,10 +14,10 @@ stylesheet:
 book.xml : src/*.xml
 	xmllint --xinclude src/book.xml > book.xml
 
-book.fo : book.xml
+book.fo : book.xml stylesheet
 	xsltproc --output book.fo resources/stylesheets/book.pdf.xsl book.xml
 
-synopsis.fo : src/synopsis.xml
+synopsis.fo : src/synopsis.xml stylesheet
 	xsltproc --output synopsis.fo resources/stylesheets/synopsis.pdf.xsl src/synopsis.xml 
 
 validate : book.xml
@@ -20,9 +27,12 @@ book.pdf : book.fo
 	fop -c cfg.xml book.fo book.pdf
 	open book.pdf
 
-book.txt : book.fo
-	fop book.fo -txt book.txt
+book.epub : book.xml
+	pandoc -f docbook -o book.epub book.xml
 
 synopsis.pdf : synopsis.fo
 	fop -c cfg.xml synopsis.fo synopsis.pdf
 	open synopsis.pdf
+
+synopsis.epub : src/synopsis.xml
+	pandoc -f docbook -o synopsis.epub src/synopsis.xml
